# hubhelp

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  main.rs  notifications.rs  request.rs  search.rs  token.rs
src/components/: NotificationRow.tsx  NotificationsPanel.tsx  NotificationsReadout.tsx  SearchPanel.tsx  notifications.css  search-panel.css
